--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 	color: rgb(51, 51, 51);
 	background: #EEEEEE;
 	font-family: 'IM Fell French Canon', serif;
-	font-size: 1.2em;
+	font-size: 1.9rem;
 }
 
 #introduction {
